solved vertical-scrollbar issue of controls panel

--- a/app/assets/stylesheets/typing.css.scss
+++ b/app/assets/stylesheets/typing.css.scss
@@ -3,8 +3,8 @@
 body {
         background-color: #FFFFFF;
         font-family: David, David CLM, Frankruehl, Narkisim, Times New Roman, Times, serif;
-        font-size: 18px;
-        line-height: 18px;
+        font-size: 12px;
+        line-height: 12px;
         text-align: right;
         direction: rtl;
 }
